--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -18,5 +18,6 @@
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
-  }
+  },
+  "gitHead": "320608837a9b30115b6e90407ad718869f11b41a"
 }
