--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@monorepo/utils",
-  "version": "0.0.3",
+  "name": "@monorepo/test-utils",
+  "version": "0.0.1",
   "description": "> TODO: description",
   "author": "tanghsuo <shuo.tang@firesoon.com>",
   "homepage": "",
@@ -19,5 +19,5 @@
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
-  "gitHead": "8f9fbc7c6550eb1d959c284259f5970e54996bae"
+  "gitHead": "0abbb2ecfe0c0a39eb09688ffeb10f76ffcf83c4"
 }
