--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "packages/*"
   ],
   "scripts": {
-    "boots": "rm -rf ./node_modules && lerna bootstrap"
+    "boots": "rm -rf ./node_modules && lerna bootstrap",
+    "start:app1": "cd packages/app1 && yarn start",
+    "start:app2": "cd packages/app2 && yarn start"
   }
 }
