--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@monorepotest/testp-components",
-  "version": "0.0.9",
+  "name": "@monorepotest/components",
+  "version": "0.1.0",
   "description": "> TODO: description",
   "author": "tanghsuo <shuo.tang@firesoon.com>",
   "homepage": "",
@@ -19,5 +19,5 @@
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
-  "gitHead": "7ff5637ecfb4ded9440c27d0f42b304ae87adfb3"
+  "gitHead": "bbd3e3b835a35dfeb0e5e41d9e012fb7104be6c3"
 }
