--- a/packages/app1/package.json
+++ b/packages/app1/package.json
@@ -28,7 +28,7 @@
     "react-dev-inspector": "^1.7.1",
     "react-dom": "^17.0.1",
     "styled-components": "5.1",
-    "umi-plugin-mf-bootstrap": "^0.0.2"
+    "@shuotest/components":"^0.2.0"
   },
   "devDependencies": {
     "@types/jest": "^23.3.12",
