--- a/packages/app1/package.json
+++ b/packages/app1/package.json
@@ -1,6 +1,6 @@
 {
   "name": "main-app",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "应用基座",
   "private": true,
   "scripts": {
@@ -17,6 +17,7 @@
     "@firesoon/ant-ui": "^2.0.0-10",
     "@firesoon/icons-react": "^1.43.9",
     "@firesoon/log-sdk": "^2.1.1-0",
+    "@shuotest/components": "^0.2.0",
     "antd": "^3",
     "crypto-js": "^4.0.0",
     "dva": "^2.6.0-beta.22",
@@ -27,8 +28,7 @@
     "react": "^17.0.1",
     "react-dev-inspector": "^1.7.1",
     "react-dom": "^17.0.1",
-    "styled-components": "5.1",
-    "@shuotest/components":"^0.2.0"
+    "styled-components": "5.1"
   },
   "devDependencies": {
     "@types/jest": "^23.3.12",
