--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,16 +1,6 @@
-{
-  "private": true,
-  "scripts": {
-    "start": "umi dev",
-    "build": "umi build",
-    "postinstall": "umi generate tmp",
-    "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
-    "test": "umi-test",
-    "test:coverage": "umi-test --coverage"
-  },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
+{  
+  "name": "@shuotest/components",
+  "version": "0.2.1",
   "lint-staged": {
     "*.{js,jsx,less,md,json}": [
       "prettier --write"
@@ -20,7 +10,6 @@
     ]
   },
   "dependencies": {
-    "@ant-design/pro-layout": "^6.5.0",
     "react": "17.x",
     "react-dom": "17.x",
     "umi": "^3.5.20"
