--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shuotest/components",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "scripts": {
     "build":"father-build"
   },
@@ -12,12 +12,19 @@
       "prettier --parser=typescript --write"
     ]
   },
+  "files": [
+    "dist",
+    "lib",
+    "es"
+  ],
   "dependencies": {
+    "@babel/runtime": "^7.8.7",
     "react": "17.x",
     "react-dom": "17.x",
     "umi": "^3.5.20"
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.13.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@umijs/preset-react": "1.x",
