--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@shuotest/components",
-  "version": "0.2.4",
+  "version": "0.2.3",
   "scripts": {
-    "build":"father-build"
+    "build": "father-build"
   },
   "lint-staged": {
     "*.{js,jsx,less,md,json}": [
@@ -24,15 +24,15 @@
     "umi": "^3.5.20"
   },
   "devDependencies": {
-    "babel-plugin-import": "^1.13.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.20",
+    "babel-plugin-import": "^1.13.0",
+    "father-build": "^1.17.2",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
     "typescript": "^4.1.2",
-    "yorkie": "^2.0.0",
-    "father-build": "^1.17.2"
+    "yorkie": "^2.0.0"
   }
 }
